--- a/style.css
+++ b/style.css
@@ -65,18 +65,21 @@ footer {
     color: white;
 }
 
+.icon-sub {
+    width: 100%;
+    text-align: center;
+}
+
+.icon-sub span {
+    display: block;
+}
+
 .footer-left {
     width: 250px;
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-}
-
-.icon-sub span {
-    display: block;
-    max-width: 100%;
-    margin: auto;
 }
 
 .footer-center {
